"Final Exam Version"

--- a/src/app/adminboard/adminboard.component.html
+++ b/src/app/adminboard/adminboard.component.html
@@ -36,11 +36,12 @@
                         <span>Doctor List</span>
                     </a>
                     <a mat-list-item routerLink="/admin/createdoc">
-                        <mat-icon>android</mat-icon>
+                        <mat-icon>create_new_folder</mat-icon>
                         <span>New Doctor</span>
                     </a>
                     <a mat-list-item routerLink="/admin/create_dept">
-                        <mat-icon>apple</mat-icon><span>Departmnents</span>
+                        <mat-icon>store</mat-icon>
+                        <span>Departmnents</span>
                     </a>
                     
                 </mat-nav-list>
@@ -57,7 +58,7 @@
                         <span>Patient List</span>
                     </a>
                     <a mat-list-item routerLink="/admin/create_patient">
-                        <mat-icon>android</mat-icon>
+                        <mat-icon>note_add</mat-icon>
                         <span>New Patient</span>
                     </a>
                     <!-- <a mat-list-item routerLink="/admin/patient_admission">
@@ -79,16 +80,16 @@
                 </mat-expansion-panel-header>
                 <mat-nav-list>
                     <a mat-list-item routerLink="/admin/newpayment">
-                        <mat-icon>groups</mat-icon>
+                        <mat-icon>payment</mat-icon>
                         <span>New Payments</span>
                     </a>
                     <a mat-list-item routerLink="/admin/paymentlist">
-                        <mat-icon>android</mat-icon>
+                        <mat-icon>list_alt</mat-icon>
                         <span>Payments List</span>
                     </a>
-                    <a mat-list-item routerLink="/admin/payment_invoices">
+                    <!-- <a mat-list-item routerLink="/admin/payment_invoices">
                         <mat-icon>apple</mat-icon><span>Total Billing Invoice</span>
-                    </a>
+                    </a> -->
                     
                 </mat-nav-list>
             </mat-expansion-panel>
@@ -101,15 +102,16 @@
                 </mat-expansion-panel-header>
                 <mat-nav-list>
                     <a mat-list-item routerLink="/admin/cabin_allotment">
-                        <mat-icon>groups</mat-icon>
+                        <mat-icon>pages</mat-icon>
                         <span>New Allotment</span>
                     </a>
                     <a mat-list-item routerLink="/admin/cabin_status">
-                        <mat-icon>android</mat-icon>
+                        <mat-icon>meeting_room</mat-icon>
                         <span>Cabins and Status</span>
                     </a>
                     <a mat-list-item routerLink="/admin/newcabin">
-                        <mat-icon>apple</mat-icon><span>Add New Cabin</span>
+                        <mat-icon>domain</mat-icon>
+                        <span>Add New Cabin</span>
                     </a>
                 </mat-nav-list>
             </mat-expansion-panel>
@@ -124,15 +126,15 @@
                 </mat-expansion-panel-header>
                 <mat-nav-list>
                     <a mat-list-item routerLink="/admin/pathology">
-                        <mat-icon>groups</mat-icon>
+                        <mat-icon>bloodtype</mat-icon>
                         <span>Pathology</span>
                     </a>
                     <a mat-list-item routerLink="/admin/pathology_type">
-                        <mat-icon>groups</mat-icon>
+                        <mat-icon>device_thermostat</mat-icon>
                         <span>Pathology Category</span>
                     </a>
                     <a mat-list-item routerLink="/admin/operation">
-                        <mat-icon>groups</mat-icon>
+                        <mat-icon>pending_actions</mat-icon>
                         <span>Operation</span>
                     </a>
                     <!-- <a mat-list-item routerLink="/admin/creatediagonosis">
@@ -155,15 +157,15 @@
                 </mat-expansion-panel-header>
                 <mat-nav-list>
                     <a mat-list-item routerLink="/admin/medicine">
-                        <mat-icon>groups</mat-icon>
+                        <mat-icon>medication</mat-icon>
                         <span>Medicine</span>
                     </a>
                     <a mat-list-item routerLink="/admin/med_report">
-                        <mat-icon>android</mat-icon>
+                        <mat-icon>settings_overscan</mat-icon>
                         <span>Medicine Report</span>
                     </a>
                     <a mat-list-item routerLink="/admin/med_supplier">
-                        <mat-icon>android</mat-icon>
+                        <mat-icon>shopping_cart</mat-icon>
                         <span>Supplier Information</span>
                     </a>
                    
