--- a/src/app/adminboard/doctor/doctorlist/doctorlist.component.html
+++ b/src/app/adminboard/doctor/doctorlist/doctorlist.component.html
@@ -1,6 +1,6 @@
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb display">
-    <li class="breadcrumb-item"><a href="#" style="text-decoration: none;">Dashboard</a></li>
+    <li class="breadcrumb-item"><a style="text-decoration: none;" routerLink="/admin">Dashboard</a></li>
     <li class="breadcrumb-item active text-dark" aria-current="page">Doctor List</li>
   </ol>
 </nav>
@@ -18,8 +18,8 @@
   
     <div class="col">
       <div class="container d-flex justify-content-end mb-3">
-        <button class="btn btn-outline-info me-2" routerLink="/admin/create_patient">New Doctor</button>
-        <button class="btn btn-outline-info" routerLink="/admin/create_patient">Departments</button>
+        <button class="btn btn-outline-info me-2" routerLink="/admin/createdoc">New Doctor</button>
+        <button class="btn btn-outline-info" routerLink="/admin/create_dept">Departments</button>
       </div>
     </div>
 
