--- a/src/app/adminboard/patient/patientlist/patientlist.component.html
+++ b/src/app/adminboard/patient/patientlist/patientlist.component.html
@@ -18,8 +18,8 @@
     
       <div class="col">
         <div class="container d-flex justify-content-end mb-3">
-          <button class="btn btn-outline-info me-2" routerLink="/admin/create_patient">New Doctor</button>
-          <button class="btn btn-outline-info" routerLink="/admin/create_patient">Departments</button>
+          <button class="btn btn-outline-info me-2" routerLink="/admin/create_patient">New Patient</button>
+          <button class="btn btn-outline-info" routerLink="/admin/admin/doctors">Doctor LIst</button>
         </div>
       </div>
   
