--- a/src/app/adminboard/adminhome/adminhome.component.html
+++ b/src/app/adminboard/adminhome/adminhome.component.html
@@ -9,7 +9,7 @@
 
   <div class="container">
     <div class="row mb-5">
-        <div class="col-md-2 col-sm-6">
+        <div class="col">
             <div class="counter blue">
                 <div class="counter-icon">
                   <i class="fa-solid fa-bed-pulse"></i>
@@ -18,7 +18,7 @@
                 <h3>Total Patient</h3>
             </div>
         </div>
-        <div class="col-md-2 col-sm-6">
+        <div class="col">
           <div class="counter">
               <div class="counter-icon">
                 <i class="fa-solid fa-user-doctor"></i>
@@ -27,7 +27,7 @@
               <h3>Total Doctors</h3>
           </div>
       </div>
-        <div class="col-md-2 col-sm-6">
+        <div class="col">
             <div class="counter blue">
                 <div class="counter-icon">
                   <i class="fas fa-building"></i>
@@ -36,7 +36,7 @@
                 <h3>Total Departments</h3>
             </div>
         </div>
-        <div class="col-md-2 col-sm-6">
+        <div class="col">
             <div class="counter">
                 <div class="counter-icon">
                   <i class="fas fa-tasks-alt"></i>
@@ -45,7 +45,7 @@
                 <h3>Pending Patient</h3>
             </div>
         </div>
-        <div class="col-md-2 col-sm-6">
+        <div class="col">
             <div class="counter blue">
                 <div class="counter-icon">
                   <i class="fas fa-tasks"></i>
@@ -54,7 +54,7 @@
                 <h3>Confirmed Patient</h3>
             </div>
         </div>
-        <div class="col-md-2 col-sm-6">
+        <div class="col">
           <div class="counter">
               <div class="counter-icon">
                 <i class="fas fa-prescription-bottle-alt"></i>
