--- a/src/app/adminboard/payments/payments.component.html
+++ b/src/app/adminboard/payments/payments.component.html
@@ -141,7 +141,7 @@
   
       <div class="d-flex justify-content-center">
         <button type="submit" class="btn btn-outline-success float-right d-flex justify-content-center m-2" id="btnLogin">Create Bill</button>
-        <button type="submit" class="btn btn-outline-info float-right d-flex justify-content-center m-2" id="btnLogin">Payment List</button>
+        <button class="btn btn-outline-info float-right d-flex justify-content-center m-2" id="btnLogin" routerLink="/admin/paymentlist">Payment List</button>
     </div>
   
     </form>
