--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -56,7 +56,7 @@
             id="form3Example4"
             class="form-control form-control-lg"
             placeholder="Enter password"
-            formControlName="userPassword"
+            formControlName="password"
           />
         </div>
 
