"Security Implementation Success with JWT token send"

--- a/src/app/adminboard/adminboard.component.html
+++ b/src/app/adminboard/adminboard.component.html
@@ -172,6 +172,23 @@
                 </mat-nav-list>
             </mat-expansion-panel>
 
+
+
+            <mat-expansion-panel [class.mat-elevation-z0]="true" class="sidenavdropdown">
+                <mat-expansion-panel-header>
+                    <i class="fa-solid fa-mortar-pestle fa-2x me-4"></i>
+                  User Management
+                </mat-expansion-panel-header>
+                <mat-nav-list>
+                    <a mat-list-item routerLink="/admin/user_list">
+                        <mat-icon>medication</mat-icon>
+                        <span>User Management</span>
+                    </a>
+                  
+                   
+                </mat-nav-list>
+            </mat-expansion-panel>
+
             
 
 
