"User Name Not Showing on table problem solved"

--- a/src/app/adminboard/usermanagement/usermanagement.component.html
+++ b/src/app/adminboard/usermanagement/usermanagement.component.html
@@ -74,9 +74,9 @@
   </ng-container> -->
 
 
-      <ng-container matColumnDef="userName">
+      <ng-container matColumnDef="username">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> User Name: </th>
-        <td mat-cell class="text-center" *matCellDef="let row"> {{row.userName}} </td>
+        <td mat-cell class="text-center" *matCellDef="let row"> {{row.username}} </td>
       </ng-container>
 
       <ng-container matColumnDef="email">
