--- a/src/app/adminboard/diagonosis/pathology/pathology.component.html
+++ b/src/app/adminboard/diagonosis/pathology/pathology.component.html
@@ -14,7 +14,7 @@
         <div class="row">
           <div class="form-group col">
             <label for="">Patient ID:</label>
-            <select class="form-select" formControlName="p_id">
+            <select class="form-select" formControlName="patient_id" (change)="patientChange($event)">
               <!-- <select class="form-select" formControlName="dept_id"  #aDept (change)="onSelect(aDept.value)"> -->
               <option *ngFor="let patient of patientList" [value]="patient.id">
                 {{ patient.id }}
@@ -23,16 +23,15 @@
           </div>
 
           <div class="form-group col">
-            <label for="">Pathologis ID:</label>
-            <select class="form-select" formControlName="pathologist_id">
-              <!-- <select class="form-select" formControlName="dept_id"  #aDept (change)="onSelect(aDept.value)"> -->
-              <option
-                *ngFor="let pathologist of emp_id_pathologist"
-                [value]="pathologist.id"
-              >
-                {{ pathologist.emp_first_name }} {{ pathologist.emp_last_name }}
-              </option>
-            </select>
+            <label for="">Patient Name ID:</label>
+            <input
+              class="form-control"
+              type="text"
+              name=""
+              id=""
+              formControlName="p_name"
+            />
+           
           </div>
         </div><br />
 
@@ -49,7 +48,7 @@
 
           <div class="form-group col">
             <label for="">Pathology Type:</label>
-            <select class="form-select" formControlName="pathology_type_id">
+            <select class="form-select" formControlName="pathology_type_id" (change)="changePathologyType($event)">
               <!-- <select class="form-select" formControlName="dept_id"  #aDept (change)="onSelect(aDept.value)"> -->
               <option
                 *ngFor="let pathologyType of pathologyTypeList"
@@ -69,7 +68,7 @@
               type="text"
               name=""
               id=""
-              formControlName="pathology_price"
+              formControlName="pathology_price" readonly
             />
           </div>
 
@@ -80,7 +79,7 @@
               type="text"
               name=""
               id=""
-              formControlName="pathology_price"
+              formControlName="pathology_desc"
             />
           </div>
         </div>
@@ -139,14 +138,14 @@
         <td mat-cell *matCellDef="let row">{{ row.id }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="p_id">
+      <ng-container matColumnDef="patient_id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Patient ID:</th>
-        <td mat-cell *matCellDef="let row">{{ row.p_id }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.patient_id }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="pathologist_id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Pathologist:</th>
-        <td mat-cell *matCellDef="let row">{{ row.pathologist_id }}</td>
+      <ng-container matColumnDef="p_name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Patient Name:</th>
+        <td mat-cell *matCellDef="let row">{{ row.p_name }}</td>
       </ng-container>
 
       <ng-container matColumnDef="doc_id">
