--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -151,6 +151,29 @@
         </div>
       </div>
 
+
+      <div class="row mb-3">
+        <!-- Date input -->
+        <div class="form-outline col">
+          <label class="form-label">Mobile:</label>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Enter Your Password"
+            formControlName="userMobile"
+          />
+        </div>
+
+        <!-- Location input -->
+        <div class="form-outline col">
+          <label class="form-label">Gender:</label>
+          <select class="form-select"  formControlName="userGender">
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+          </select>
+        </div>
+      </div>
+
       <div class="tacbox text-center mt-4 pt-2">
         <input id="checkbox" type="checkbox" class="me-2" />
         <label for="checkbox">
