--- a/src/app/adminboard/diagonosis/pathology/pathology.component.html
+++ b/src/app/adminboard/diagonosis/pathology/pathology.component.html
@@ -23,7 +23,7 @@
           </div>
 
           <div class="form-group col">
-            <label for="">Patient Name ID:</label>
+            <label for="">Patient Name:</label>
             <input
               class="form-control"
               type="text"
