--- a/src/app/landingpage/header/header.component.html
+++ b/src/app/landingpage/header/header.component.html
@@ -39,6 +39,21 @@
             <a *ngIf="!checkLogin" routerLink="/login" class="nav-item nav-link bgph">Sign In</a>
             <a *ngIf="!checkLogin" routerLink="/signup" class="nav-item nav-link bgph">Sign Up</a>
             <a *ngIf="checkLogin"  routerLink="/" class="nav-item nav-link bgph" (click)="logOut()">Logout</a>
+            
+            <div ngbDropdown class="d-inline-block">
+                <button type="button" class="btn" id="dropdownBasic1" ngbDropdownToggle>
+                    <!-- <div class="bg-dark rounded-circle me-2"></div> -->
+                    <img src="../../assets/images/team1.png" alt="" class="img-fluid imgtest rounded-circle">
+                    <span class="text-white">Minhajul Islam</span>
+                </button>
+               
+                <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                    <button ngbDropdownItem routerLink="/profile">Profile</button>
+                    <button ngbDropdownItem>Log Out</button>
+                </div>
+            </div>
+            
+            
             <!-- <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                 <div class="dropdown-menu m-0">
