--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -445,12 +445,12 @@
 
 <ng-template #content let-c="close" let-d="dismiss">
     <div class="modal-header">
-      <h4 class="modal-title text-center" id="modal-basic-title">Edit Doctor's Information:</h4>
+      <h4 class="modal-title text-center" id="modal-basic-title">Make a Quick Appointment:</h4>
       <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
     </div>
     <div class="modal-body">
 
-     <app-newappointment></app-newappointment>
+     <app-quickappointment></app-quickappointment>
   
     </div>
     <!-- <div class="modal-footer">
