--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,16 +1,5 @@
 <section style="background-color: #eee;">
   <div class="container py-5">
-    <div class="row">
-      <div class="col">
-        <nav aria-label="breadcrumb" class="bg-light rounded-3 p-3 mb-4">
-          <ol class="breadcrumb mb-0">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">User</a></li>
-            <li class="breadcrumb-item active" aria-current="page">User Profile</li>
-          </ol>
-        </nav>
-      </div>
-    </div>
 
     <div class="row">
       <div class="col-lg-4">
@@ -18,9 +7,9 @@
           <div class="card-body text-center">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
-            <h5 class="my-3">John Smith</h5>
-            <p class="text-muted mb-1">Full Stack Developer</p>
-            <p class="text-muted mb-4">Bay Area, San Francisco, CA</p>
+            <h5 class="my-3"> {{userName}}</h5>
+            <p class="text-muted mb-4">{{fullName}}</p>
+            <p class="text-muted mb-4">{{userLocation}}</p>
             <div class="d-flex justify-content-center mb-2">
               <button type="button" class="btn btn-primary">Follow</button>
               <button type="button" class="btn btn-outline-primary ms-1">Message</button>
@@ -62,7 +51,7 @@
                 <p class="mb-0">Full Name</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">Johnatan Smith</p>
+                <p class="text-muted mb-0">{{fullName}}</p>
               </div>
             </div>
             <hr>
@@ -71,16 +60,16 @@
                 <p class="mb-0">Email</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">example@example.com</p>
+                <p class="text-muted mb-0">{{userEmail}}</p>
               </div>
             </div>
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <p class="mb-0">Phone</p>
+                <p class="mb-0">Gender</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">(097) 234-5678</p>
+                <p class="text-muted mb-0">{{userGender}}</p>
               </div>
             </div>
             <hr>
@@ -89,7 +78,7 @@
                 <p class="mb-0">Mobile</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">(098) 765-4321</p>
+                <p class="text-muted mb-0">{{userMobile}}</p>
               </div>
             </div>
             <hr>
@@ -98,78 +87,149 @@
                 <p class="mb-0">Address</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">Bay Area, San Francisco, CA</p>
+                <p class="text-muted mb-0">{{userLocation}}</p>
               </div>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6">
-            <div class="card mb-4 mb-md-0">
-              <div class="card-body">
-                <p class="mb-4"><span class="text-primary font-italic me-1">assigment</span> Project Status
-                </p>
-                <p class="mb-1" style="font-size: .77rem;">Web Design</p>
-                <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">Website Markup</p>
-                <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 72%" aria-valuenow="72"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">One Page</p>
-                <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 89%" aria-valuenow="89"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">Mobile Template</p>
-                <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">Backend API</p>
-                <div class="progress rounded mb-2" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
+
+
+<h4 class="text-center bg-info text-white">All Your Appointments</h4>
+
+
+ <div class="row">
+    <mat-form-field class="col">
+      <mat-label>Search Your Data Here</mat-label>
+      <input matInput (keyup)="applyFilter($event)">
+    </mat-form-field>
+  </div>
+
+  <div class="mat-elevation-z8 table_wrapper">
+    <table mat-table [dataSource]="datasource" matSort>
+
+
+
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Appointment ID: </th>
+        <td mat-cell class="text-center" *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="apStatus">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Appointment Status: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"><div [ngClass]="{'bg-success': row.apStatus === 'Confirmed', 'bg-secondary': row.apStatus === 'Pending'}" class="text-white rounded"> {{row.apStatus}}</div> </td>
+      </ng-container>
+
+      <ng-container matColumnDef="p_type">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Patient Type: </th>
+        <td mat-cell class="text-center" *matCellDef="let row"> {{row.p_type}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="p_id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Patient ID: </th>
+        <td mat-cell class="text-center" *matCellDef="let row"> {{row.p_id}}</td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="apFirstName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name: </th>
+        <td mat-cell  class="text-center"  *matCellDef="let row"> {{row.apFirstName}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="apLastName">
+        <th mat-header-cell *matHeaderCellDef> Last Name: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.apLastName}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="apMobile">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Mobile: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.apMobile}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="dept_id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Department ID: </th>
+        <td mat-cell class="text-center"  *matCellDef="let row"> {{row.dept_id}} </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="doc_id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Doctor ID: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.doc_id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="apLocation">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Location: </th>
+        <td mat-cell class="text-center"  *matCellDef="let row"> {{row.apLocation}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="apGender">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.apGender}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="apAge">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Age: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.apAge}} </td>
+      </ng-container>
+      <ng-container matColumnDef="apDeseaseDetails">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Details: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.apDeseaseDetails}} </td>
+      </ng-container>
+
+
+
+
+
+
+      
+      <ng-container matColumnDef="apDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Appointment Date: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.apDate}} </td>
+      </ng-container>
+
+
+
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell  class="text-center"  *matCellDef="let row">
+          <div class="d-flex justify-content-center align-items-center">
+            <button class="btn btn-success btn-sm me-1"
+            >Cancel Appointment</button><br>
           </div>
-          <div class="col-md-6">
-            <div class="card mb-4 mb-md-0">
-              <div class="card-body">
-                <p class="mb-4"><span class="text-primary font-italic me-1">assigment</span> Project Status
-                </p>
-                <p class="mb-1" style="font-size: .77rem;">Web Design</p>
-                <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">Website Markup</p>
-                <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 72%" aria-valuenow="72"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">One Page</p>
-                <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 89%" aria-valuenow="89"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">Mobile Template</p>
-                <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">Backend API</p>
-                <div class="progress rounded mb-2" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <!-- <tr class="mat-row" *matNoDataRow>
+<td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+</tr> -->
+    </table>
+  </div>
+  <mat-paginator [pageSizeOptions]="[5,10,15, 100]" showFirstLastButtons
+    aria-label="Select page of users"></mat-paginator>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </div>
       </div>
     </div>
