--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -66,6 +66,15 @@
             <hr>
             <div class="row">
               <div class="col-sm-3">
+                <p class="mb-0">Role</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0">{{userRole}}</p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
                 <p class="mb-0">Gender</p>
               </div>
               <div class="col-sm-9">
