--- a/src/app/adminboard/prescription/prescription.component.html
+++ b/src/app/adminboard/prescription/prescription.component.html
@@ -1,1 +1,61 @@
-<p>prescription works!</p>
+<div class="container-fluid">
+    <div class="d-flex row">
+        <div class="logo p-3 col align-items-center">
+            <img class="" src="https://images2.imgbox.com/79/7a/3CWkEnHN_o.png" height="50">
+        </div>
+        <div class="d-flex justify-content-center info col">
+            <div class="docInfo ms-5 me-5 pt-3">
+                <h4>Doctor Information</h4>
+                <div class="fw-bold">Minhajul Islam</div>
+                <div>Mobile: 0XXXXXXXXX</div>
+                <div>MBBS, FCPS</div>
+                <div>Dhaka Medical Hospital</div>
+            </div>
+            <div class="docInfo ms-5 pt-3 me-5 col">
+                <h4>Patient Info </h4>
+                <div class="fw-bold">Minhajul Islam</div>
+                <div>Mobile: 0XXXXXXXXX</div>
+                <div>MBBS, FCPS</div>
+                <div>Dhaka Medical Hospital</div>
+            </div>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row symptom">
+        <div class="col-3 border-end ">
+        <h3 class="bg-success p-2 text-center text-white">Symptoms</h3>
+        <textarea class="form-control col-md-12" style="height: 250px;" ></textarea>
+        
+        <div class="btnGroup mt-2">
+            <div class="btn btn-outline-success btn-sm w-20">
+                Save
+            </div>
+            <div class="btn btn-outline-danger btn-sm w-20">
+                Cancel
+            </div>
+        </div>
+        
+    </div>
+        <div class="col-9">
+            <div>
+                <h1 class="fw-semibold display-2">R<sub>x</sub></h1>
+                    <hr>
+            </div>
+        </div>
+       
+    </div>
+
+
+    <div class="row">
+        <div class="col-3 border-end symptom">
+            <h3 class="bg-success p-2 text-center text-white">Texts</h3>
+        </div>
+       
+    </div>
+
+
+
+
+
+</div>
